--- a/index.html
+++ b/index.html
@@ -2,73 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <style>
-    /* Container to hold the 3D cube */
-    .cube-container {
-      perspective: 1000px;
-      position: relative;
-      width: 300px;
-      height: 300px;
-    }
-
-    /* The 3D cube */
-    .cube {
-      position: relative;
-      width: 100%;
-      transform-style: preserve-3d;
-      animation: rotateCube 10s infinite linear;
-    }
-
-    /* Cube faces */
-    .face {
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      background: rgba(255, 255, 255, 0.8);
-      border: 1px solid #ccc;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    }
-
-    /* Text styling */
-    .text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      font-size: 3em;
-      transform: translate(-50%, -50%);
-      z-index: 10;
-    }
-
-    /* Positioning the cube faces */
-    .front  { transform: rotateY(  0deg) translateZ(150px); }
-    .back   { transform: rotateY(180deg) translateZ(150px); }
-    .left   { transform: rotateY( 90deg) translateZ(150px); }
-    .right  { transform: rotateY(-90deg) translateZ(150px); }
-    .top    { transform: rotateX( 90deg) translateZ(150px); }
-    .bottom { transform: rotateX(-90deg) translateZ(150px); }
-
-    /* Animation */
-    @keyframes rotateCube {
-      0% {
-        transform: rotateX(0deg) rotateY(0deg);
-      }
-      100% {
-        transform: rotateX(360deg) rotateY(360deg);
-      }
-    }
-  </style>
+  <title>modular.bond</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="cube-container">
-    <div class="cube">
-      <div class="face front"></div>
-      <div class="face back"></div>
-      <div class="face left"></div>
-      <div class="face right"></div>
-      <div class="face top"></div>
-      <div class="face bottom"></div>
-    </div>
-    <div class="text">modular.bond</div>
+  <div class="engraved-text">
+    modular.bond
   </div>
 </body>
 </html>
