--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="engraved-text">
+  <div class="engraved-text"><a href="https://www.are.na/modular-bond">
     modular.bond
+  </a>
+    
   </div>
 </body>
 </html>
