--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="engraved-text"><a href="https://www.are.na/modular-bond">
+  <div class="engraved-text">
     modular.bond
-  </a>
-    
   </div>
 </body>
 </html>
