--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>modular.bond</title>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium Web:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="title-text">
     <h1>modular.bond</h1>
   </div>
-  
 </body>
 </html>
