--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="title-text">
-    <h1>modular.bond</h1>
+    <h1><span class="hover-word">modular</span><span class="dot">.</span><span class="hover-word">bond</span></h1>
   </div>
 </body>
 </html>
