--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="title-text">
-    <h1><span class="hover-word">modular</span><span class="dot">.</span><span class="hover-word">bond</span></h1>
+    <h1 id="title"><span id="word1" class="hover-word">modular</span><span class="dot">.</span><span id="word2" class="hover-word">bond</span></h1>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
