--- a/info/index.html
+++ b/info/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>info @ modular.bond</title>
   <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@200;300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <div class="dissolve-mask"></div> 
 <div class="title-text">
-<h1><a href="index.html"><span class="hover-word">about</span><span class="dot">.</span><span class="hover-word">us</span></a></h1>
-<p>We are a platform focused on the dynamic interplay between <i>creativity</i>, <i>culture</i>, and <i>technology</i>.</p>
+<h1><a href="/"><span class="hover-word">about</span><span class="dot">.</span><span class="hover-word">us</span></a></h1>
+<p>We are a platform focused on the dynamic interplay between creativity, culture, and technology.</p>
 </div>
 </body>
 </html>
