--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="title-text">
-    <h1 id="title"><a href="/info"><span id="word1" class="hover-word">modular</span><span class="dot">.</span><span id="word2" class="hover-word">bond</span></a></h1>
+    <h1 id="title"><a href="/@"><span id="word1" class="hover-word">modular</span><span class="dot">.</span><span id="word2" class="hover-word">bond</span></a></h1>
   </div>
   <script src="script.js"></script>
 </body>
