--- a/@/index.html
+++ b/@/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>info @ modular.bond</title>
+  <title>@ modular.bond</title>
   <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@200;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css">
 </head>
