--- a/info/index.html
+++ b/info/index.html
@@ -5,6 +5,7 @@
   <title>@ modular.bond</title>
   <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@200;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css">
+  <script src="/page.js"></script>
 </head>
 <body>
 <div class="dissolve-mask"></div> 
