--- a/info/index.html
+++ b/info/index.html
@@ -10,7 +10,7 @@
 <div class="dissolve-mask"></div> 
 <div class="title-text">
 <h1><a href="/"><span class="hover-word">about</span><span class="dot">.</span><span class="hover-word">us</span></a></h1>
-<p>We are a platform focused on the dynamic interplay between creativity, culture, and technology.</p>
+<p>Fusing creativity, culture, and tech.</p>
 </div>
 </body>
 </html>
