--- a/info/index.html
+++ b/info/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>@ modular.bond</title>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@200;300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
