--- a/projects.html
+++ b/projects.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>modular.bond</title>
+  <title>projects · modular.bond</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h2>modular.bond</h2>
-</body>
+<div class="title">
+  <h1>Projects</h1>
+  
+</div>
 </html>
