--- a/info/index.html
+++ b/info/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>@ modular.bond</title>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;300&display=swap" rel="stylesheet">
+  <title>modular.bond</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
