--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h2>modular.bond</h2>
+  <div id="particles-js"> 
+    <div class="title">
+      <h2>modular.bond</h2>
+    </div>
+  </div> 
+  <!-- Import Particles.js and app.js files -->
+  <script src="./particles.js"></script> 
+  <script src="./app.js"></script> 
 </body>
 </html>
