--- a/xix.html
+++ b/xix.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="responsive-google-slides">
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR-bM2KA7RsiT2-tQB4wTky9K-bFYmBEwu8QzO-r9uHs9TxJuMejOVEAXWgMq7LlMcGsOlon4pbBoKx/embed?rm=minimal" style="pointer-events: none;" height=100% width=100% frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR-bM2KA7RsiT2-tQB4wTky9K-bFYmBEwu8QzO-r9uHs9TxJuMejOVEAXWgMq7LlMcGsOlon4pbBoKx/embed?rm=minimal" style="pointer-events: none;" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
 </body>
 </html>
