--- a/xix.html
+++ b/xix.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>xix</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>xix</title>
+<link rel="stylesheet" href="styles.css">
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.10.4/dist/gsap.min.js"></script>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  #gradient-canvas {
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(circle at center, #ffffff, #ffffff, #ffffff); /* Start with white */
+  }
+</style>
 </head>
 <body>
-    <div class="responsive-google-slides">
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR-bM2KA7RsiT2-tQB4wTky9K-bFYmBEwu8QzO-r9uHs9TxJuMejOVEAXWgMq7LlMcGsOlon4pbBoKx/embed?rm=minimal" style="pointer-events: none;" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-    </div>
+<div id="gradient-canvas">
+    <h1 style="text-align: center;">discovery is in between the realization of oblique events</h1>
+</div>
+<script>
+function getRandomColor() {
+  let letters = '0123456789ABCDEF';
+  let color = '#';
+  for (let i = 0; i < 6; i++) {
+    color += letters[Math.floor(Math.random() * 16)];
+  }
+  return color;
+}
+
+function animateGradient() {
+  const canvas = document.getElementById('gradient-canvas');
+  const color1 = getRandomColor();
+  const color2 = getRandomColor();
+  const color3 = getRandomColor();
+
+  gsap.to(canvas, {
+    duration: 12, // Duration of the animation in seconds
+    background: `radial-gradient(circle at center, ${color1}, ${color2}, #ffffff)`, // Three color stops
+    ease: "sine.inOut", // This easing function creates a smooth transition
+    onComplete: animateGradient // Once the animation is complete, start it again
+  });
+}
+
+// Start the animation
+animateGradient();
+</script>
 </body>
 </html>
