--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="particles-js"> 
     <div class="title">
-      <h2>modular.bond</h2>
+      <h2 style="user-select: none;">modular.bond</h2>
     </div>
   </div> 
   <!-- Import Particles.js and app.js files -->
