--- a/xix.html
+++ b/xix.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <div id="gradient-canvas">
-    <h1 style="text-align: center;">discovery is in between the realization of oblique events</h1>
+    <h1 style="text-align: center;"></h1>
 </div>
 <script>
 function getRandomColor() {
