--- a/xix.html
+++ b/xix.html
@@ -4,28 +4,49 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>xix</title>
-<link rel="stylesheet" href="styles.css">
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.10.4/dist/gsap.min.js"></script>
 <style>
   body, html {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black; /* Canvas background is black */
   }
   #gradient-canvas {
     width: 100vw;
     height: 100vh;
-    background: radial-gradient(circle at center, #ffffff, #ffffff, #ffffff); /* Start with white */
+    position: relative;
+    overflow: hidden;
+  }
+  #noise {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Crect width='100' height='100' fill='url(%23grain)'/%3E%3Cdefs%3E%3Cpattern id='grain' patternUnits='userSpaceOnUse' width='100' height='100'%3E%3CfeTurbulence baseFrequency='1.5' type='fractalNoise'/%3E%3C/pattern%3E%3C/defs%3E%3C/svg%3E");
+    background-size: cover;
+    opacity: 0.3;
+    pointer-events: none;
+    mix-blend-mode: overlay;
   }
 </style>
 </head>
 <body>
-<div id="gradient-canvas">
-    <h1 style="text-align: center;"></h1>
-</div>
+<div id="gradient-canvas"></div>
+<div id="noise"></div>
 <script>
+// Function to update the SVG noise
+function updateNoise() {
+  const noise = document.getElementById('noise');
+  noise.style.backgroundImage = `url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Crect width='100' height='100' fill='url(%23grain)'/%3E%3Cdefs%3E%3Cpattern id='grain' patternUnits='userSpaceOnUse' width='100' height='100'%3E%3CfeTurbulence baseFrequency='${Math.random() * 0.1 + 0.02}' type='fractalNoise'/%3E%3C/pattern%3E%3C/defs%3E%3C/svg%3E")`;
+}
+
 function getRandomColor() {
-  let letters = '0123456789ABCDEF';
+  const letters = '0123456789ABCDEF';
   let color = '#';
   for (let i = 0; i < 6; i++) {
     color += letters[Math.floor(Math.random() * 16)];
@@ -40,15 +61,16 @@ function animateGradient() {
   const color3 = getRandomColor();
 
   gsap.to(canvas, {
-    duration: 12, // Duration of the animation in seconds
-    background: `radial-gradient(circle at center, ${color1}, ${color2}, #ffffff)`, // Three color stops
+    duration: 10, // Duration of the animation in seconds
+    background: `radial-gradient(circle at center center, ${color1} 0%, ${color2} 25%, ${color3} 40%, #000000 100%)`, // Add more colors and keep the gradient to 50% of the page
     ease: "sine.inOut", // This easing function creates a smooth transition
     onComplete: animateGradient // Once the animation is complete, start it again
   });
 }
 
-// Start the animation
+// Start the animations
 animateGradient();
+setInterval(updateNoise, 450); // Update the noise every 40 milliseconds
 </script>
 </body>
 </html>
