--- a/xix.html
+++ b/xix.html
@@ -13,40 +13,34 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black; /* Canvas background is black */
+    background-color: black; /* Change to black */
   }
   #gradient-canvas {
     width: 100vw;
     height: 100vh;
     position: relative;
+    background: radial-gradient(circle at center center, #000000 20%, #000000 20%);
     overflow: hidden;
   }
-  #noise {
+  #gradient-canvas::after {
+    content: "";
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Crect width='100' height='100' fill='url(%23grain)'/%3E%3Cdefs%3E%3Cpattern id='grain' patternUnits='userSpaceOnUse' width='100' height='100'%3E%3CfeTurbulence baseFrequency='1.5' type='fractalNoise'/%3E%3C/pattern%3E%3C/defs%3E%3C/svg%3E");
-    background-size: cover;
-    opacity: 0.3;
+    background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='555' numOctaves='511' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    filter: contrast(1%) brightness(22%) invert(100%);
+    mix-blend-mode: multiply;
     pointer-events: none;
-    mix-blend-mode: overlay;
   }
 </style>
 </head>
 <body>
 <div id="gradient-canvas"></div>
-<div id="noise"></div>
 <script>
-// Function to update the SVG noise
-function updateNoise() {
-  const noise = document.getElementById('noise');
-  noise.style.backgroundImage = `url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Crect width='100' height='100' fill='url(%23grain)'/%3E%3Cdefs%3E%3Cpattern id='grain' patternUnits='userSpaceOnUse' width='100' height='100'%3E%3CfeTurbulence baseFrequency='${Math.random() * 0.1 + 0.02}' type='fractalNoise'/%3E%3C/pattern%3E%3C/defs%3E%3C/svg%3E")`;
-}
-
 function getRandomColor() {
-  const letters = '0123456789ABCDEF';
+  let letters = '0123456789ABCDEF';
   let color = '#';
   for (let i = 0; i < 6; i++) {
     color += letters[Math.floor(Math.random() * 16)];
@@ -56,21 +50,21 @@ function getRandomColor() {
 
 function animateGradient() {
   const canvas = document.getElementById('gradient-canvas');
+  // Get two random colors for the gradient
   const color1 = getRandomColor();
   const color2 = getRandomColor();
-  const color3 = getRandomColor();
-
+  
   gsap.to(canvas, {
-    duration: 10, // Duration of the animation in seconds
-    background: `radial-gradient(circle at center center, ${color1} 0%, ${color2} 25%, ${color3} 40%, #000000 100%)`, // Add more colors and keep the gradient to 50% of the page
+    duration: 7, // Duration of the animation in seconds
+    // Create a gradient with two random colors and black, keeping it centered and at 50% size
+    background: `radial-gradient(circle at center center, ${color1} 0%, ${color2} 20%, #000000 80%, #000000 100%)`,
     ease: "sine.inOut", // This easing function creates a smooth transition
     onComplete: animateGradient // Once the animation is complete, start it again
   });
 }
 
-// Start the animations
+// Start the animation
 animateGradient();
-setInterval(updateNoise, 450); // Update the noise every 40 milliseconds
 </script>
 </body>
 </html>
