--- a/xix.html
+++ b/xix.html
@@ -29,8 +29,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='555' numOctaves='511' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(1%) brightness(22%) invert(100%);
+    background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1' numOctaves='5000' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    filter: contrast(20%) brightness(15%) invert(1050%);
     mix-blend-mode: multiply;
     pointer-events: none;
   }
@@ -55,9 +55,9 @@ function animateGradient() {
   const color2 = getRandomColor();
   
   gsap.to(canvas, {
-    duration: 7, // Duration of the animation in seconds
+    duration: 5, // Duration of the animation in seconds
     // Create a gradient with two random colors and black, keeping it centered and at 50% size
-    background: `radial-gradient(circle at center center, ${color1} 0%, ${color2} 20%, #000000 80%, #000000 100%)`,
+    background: `radial-gradient(circle at center center, ${color1} 0%, ${color2} 30%, #000000 50%, #000000 100%)`,
     ease: "sine.inOut", // This easing function creates a smooth transition
     onComplete: animateGradient // Once the animation is complete, start it again
   });
