--- a/xix/index.html
+++ b/xix/index.html
@@ -43,7 +43,7 @@
         // Get the current URL and remove the last segment (index.html)
         const baseUrl = window.location.href.replace(/\/[^\/]*$/, '');
         // Navigate to ideas.html within the same base URL
-        window.location.href = baseUrl + '/ideas.html';
+        window.location.href = baseUrl + '/ideas';
     });
   </script>
 <div id="gradient-canvas">
