--- a/xix/ideas/index.html
+++ b/xix/ideas/index.html
@@ -25,8 +25,8 @@
       .responsive-google-slides iframe {
         max-width: 100%;
         max-height: 100%;
-        width: 100vw;
-        height: 100vh;
+        width: 1920px;
+        height: 1080px;
       }
 </style>
 <body>
