--- a/xix/index.html
+++ b/xix/index.html
@@ -19,7 +19,7 @@
     width: 100vw;
     height: 100vh;
     position: relative;
-    background: radial-gradient(circle at center center, #000000 50%, #000000 50%);
+    background: radial-gradient(circle at center, #000000 100%, #000000 100%);
     overflow: hidden;
   }
 
@@ -31,7 +31,7 @@
     bottom: 0;
     left: 0;
     background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1' numOctaves='5000' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(20%) brightness(18%) invert(1050%);
+    filter: contrast(20%) brightness(20%) invert(1050%);
     mix-blend-mode: multiply;
     pointer-events: none;
   }
@@ -60,17 +60,19 @@ function animateGradient() {
   const color2 = getRandomColor();
 
   // Generate random sizes for the gradient
-  const startSize = Math.random() * 20; // Controls the start size of the gradient (e.g., 30%)
-  const endSize = startSize + Math.random() * 30; // Controls how much the gradient grows (e.g., up to 100%)
+  const startSize = Math.random() * 30; // Controls the start size of the gradient
+  // Ensure the gradient does not get too sharp by setting a minimum threshold for the end size
+  const endSize = Math.max(startSize + 20, startSize + Math.random() * 50); // At least 20% larger than startSize
 
   gsap.to(canvas, {
-    duration: 1, // Duration of the animation in seconds
+    duration: 7, // Duration of the animation in seconds
     // Create a gradient with dynamic colors, sizes, and positions
-    background: `radial-gradient(circle at ${Math.random()*100}% ${Math.random()*100}%, ${color1} ${startSize}%, ${color2} ${endSize}%, #000000 50%)`,
+    background: `radial-gradient(circle at center, ${color1} ${startSize}%, ${color2} ${endSize}%, #000000 90%)`,
     ease: "sine.inOut", // Smooth transition
     onComplete: animateGradient // Recur the animation
   });
 }
+
 
 
 // Initiate the animation
