--- a/xix/index.html
+++ b/xix/index.html
@@ -42,7 +42,7 @@
 <script>
 document.addEventListener('click', function() {
     // Navigate to ideas.html within the same base URL
-    window.location.href = window.location.href.replace(/\/[^\/]*$/, '') + '/ideas';
+    window.location.href = window.location.href.replace(/\/[^\/]*$/, '') + '/hello';
 });
 
 function getRandomColor() {
