--- a/xix/index.html
+++ b/xix/index.html
@@ -8,19 +8,21 @@
 <style>
   body, html {
     margin: 0;
+    padding: 0;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black; /* Change to black */
+    background-color: black;
+    width: 100%;
+    height: 100%;
   }
 
   #gradient-canvas {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: relative;
     background: radial-gradient(circle at center, #000000 100%, #000000 100%);
-    overflow: hidden;
   }
 
   #gradient-canvas::after {
@@ -31,7 +33,7 @@
     bottom: 0;
     left: 0;
     background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1' numOctaves='500' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(20%) brightness(20%) invert(1050%);
+    filter: contrast(20%) brightness(15%) invert(1050%);
     mix-blend-mode: multiply;
     pointer-events: none;
   }
@@ -40,10 +42,12 @@
 <body>
 <div id="gradient-canvas"></div>
 <script>
-document.addEventListener('click', function() {
-    // Navigate to ideas.html within the same base URL
-    window.location.href = window.location.href.replace(/\/[^\/]*$/, '') + '/hello';
-});
+// Adding both click and touchstart event listeners for mobile compatibility
+function navigateToHello() {
+  window.location.href = window.location.href.replace(/\/[^\/]*$/, '') + '/hello';
+}
+document.addEventListener('click', navigateToHello);
+document.addEventListener('touchstart', navigateToHello);
 
 function getRandomColor() {
   let letters = '0123456789ABCDEF';
@@ -54,28 +58,33 @@ function getRandomColor() {
   return color;
 }
 
+function setInitialGradient() {
+  const canvas = document.getElementById('gradient-canvas');
+  const color1 = getRandomColor();
+  const color2 = getRandomColor();
+  const startSize = 30;  // Example initial size
+  const endSize = 50;    // Example initial end size
+
+  canvas.style.background = `radial-gradient(circle at center, ${color1} ${startSize}%, ${color2} ${endSize}%, #000000 55%)`;
+}
+
 function animateGradient() {
   const canvas = document.getElementById('gradient-canvas');
   const color1 = getRandomColor();
   const color2 = getRandomColor();
 
-  // Generate random sizes for the gradient
-  const startSize = Math.random() * 30; // Controls the start size of the gradient
-  // Ensure the gradient does not get too sharp by setting a minimum threshold for the end size
-  const endSize = Math.max(startSize + 20, startSize + Math.random() * 50); // At least 20% larger than startSize
+  const startSize = Math.random() * 30;
+  const endSize = Math.max(startSize + 20, startSize + Math.random() * 50);
 
   gsap.to(canvas, {
-    duration: 7, // Duration of the animation in seconds
-    // Create a gradient with dynamic colors, sizes, and positions
+    duration: 7,
     background: `radial-gradient(circle at center, ${color1} ${startSize}%, ${color2} ${endSize}%, #000000 90%)`,
-    ease: "sine.inOut", // Smooth transition
-    onComplete: animateGradient // Recur the animation
+    ease: "sine.inOut",
+    onComplete: animateGradient
   });
 }
+setInitialGradient();
 
-
-
-// Initiate the animation
 animateGradient();
 </script>
 </body>
