--- a/xix/index.html
+++ b/xix/index.html
@@ -22,7 +22,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    background: radial-gradient(circle at center, #000000 100%, #000000 100%);
   }
 
   #gradient-canvas::after {
@@ -32,8 +31,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1' numOctaves='500' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    filter: contrast(20%) brightness(15%) invert(1050%);
+    background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    filter: contrast(20%) brightness(11%) invert(100%);
     mix-blend-mode: multiply;
     pointer-events: none;
   }
@@ -42,12 +41,13 @@
 <body>
 <div id="gradient-canvas"></div>
 <script>
-// Adding both click and touchstart event listeners for mobile compatibility
 function navigateToHello() {
   window.location.href = window.location.href.replace(/\/[^\/]*$/, '') + '/hello';
 }
 document.addEventListener('click', navigateToHello);
 document.addEventListener('touchstart', navigateToHello);
+
+const canvas = document.getElementById('gradient-canvas');
 
 function getRandomColor() {
   let letters = '0123456789ABCDEF';
@@ -59,32 +59,26 @@ function getRandomColor() {
 }
 
 function setInitialGradient() {
-  const canvas = document.getElementById('gradient-canvas');
   const color1 = getRandomColor();
   const color2 = getRandomColor();
-  const startSize = 30;  // Example initial size
-  const endSize = 50;    // Example initial end size
-
-  canvas.style.background = `radial-gradient(circle at center, ${color1} ${startSize}%, ${color2} ${endSize}%, #000000 55%)`;
+  gsap.set(canvas, {
+    background: `radial-gradient(circle at center, ${color1} 30%, ${color2} 50%, #000000 55%)`
+  });
 }
 
 function animateGradient() {
-  const canvas = document.getElementById('gradient-canvas');
   const color1 = getRandomColor();
   const color2 = getRandomColor();
 
-  const startSize = Math.random() * 30;
-  const endSize = Math.max(startSize + 20, startSize + Math.random() * 50);
-
   gsap.to(canvas, {
-    duration: 7,
-    background: `radial-gradient(circle at center, ${color1} ${startSize}%, ${color2} ${endSize}%, #000000 90%)`,
-    ease: "sine.inOut",
+    duration: 15, // Increased duration for smoother transition
+    background: `radial-gradient(circle at center, ${color1} 30%, ${color2} 50%, #000000 90%)`,
+    ease: "power1.inOut", // Simplified easing function
     onComplete: animateGradient
   });
 }
-setInitialGradient();
 
+setInitialGradient();
 animateGradient();
 </script>
 </body>
