--- a/xix/index.html
+++ b/xix/index.html
@@ -31,6 +31,8 @@
     right: 0;
     bottom: 0;
     left: 0;
+    background: url("data:image/svg+xml,%3Csvg viewBox='0 0 500 500' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    filter: contrast(1%) brightness(10%) invert(100%);
     mix-blend-mode: multiply;
     pointer-events: none;
   }
@@ -69,7 +71,7 @@ function animateGradient() {
   const color2 = getRandomColor();
 
   gsap.to(canvas, {
-    duration: 15, // Increased duration for smoother transition
+    duration: 12, // Increased duration for smoother transition
     background: `radial-gradient(circle at center, ${color1} 30%, ${color2} 50%, #000000 85%)`,
     ease: "power1.inOut", // Simplified easing function
     onComplete: animateGradient
