--- a/live.html
+++ b/live.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Live Stream</title>
+<title>modular.bond.live</title>
 <style>
   /* Set the body background to black */
   body {
