--- a/radio/index.html
+++ b/radio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>modular.live</title>
+    <title>modular.radio</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
         body, html {
